--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,39 +1,38 @@
-name: Build and Push Docker Image
+name: Docker Build and Push
 
 on:
   push:
     branches:
-      - main  # Defina a branch desejada para o push
+      - main  # ou a branch que você estiver usando
+  pull_request:
+    branches:
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
+    - name: Check out code
       uses: actions/checkout@v2
 
     - name: Log in to Docker Hub
       uses: docker/login-action@v2
       with:
-        username: ${{ secrets.ericksilvad8 }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+        username: ${{ secrets.ericksilvad8}}  # Seu nome de usuário do Docker Hub
+        password: ${{ secrets.dckr_pat_xywKqk16ng0TVqYR173rZBSTghY}}  # O token de acesso gerado no Docker Hub
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
-
-    - name: Cache Docker layers
-      uses: actions/cache@v2
-      with:
-        path: /tmp/.buildx-cache
-        key: ${{ runner.os }}-buildx-${{ github.sha }}
-        restore-keys: |
-          ${{ runner.os }}-buildx-
-
-    - name: Build Docker image
+    - name: Build and push React app image
       run: |
-        docker build -t ericksilvad8/react-app:latest .
+        docker build -t ericksilvad8/react-app .
+        docker push ericksilvad8/react-app
 
-    - name: Push Docker image
+    - name: Build and push Backend image
       run: |
-        docker push ericksilvad8/react-app:latest
+        docker build -t ericksilvad8/backend-app .
+        docker push ericksilvad8/backend-app
+
+    - name: Build and push PostgreSQL image
+      run: |
+        docker build -t ericksilvad8/my-postgres-db .
+        docker push ericksilvad8/my-postgres-db
