--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Log in to DockerHub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.ericksilvad8 }}
+          username: ${{ secrets.ERICKSILVAD8 }}
           password: ${{ secrets.dckr_pat_xywKqk16ng0TVqYR173rZBSTghY}}
 
       - name: Build Docker image
