--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,4 +1,4 @@
-name: Build and Push Docker Image
+name: Docker Build and Push
 
 on:
   push:
@@ -8,18 +8,19 @@ on:
 jobs:
   docker_build:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Check out repository
-        uses: actions/checkout@v2
+    - name: Checkout code
+      uses: actions/checkout@v3
 
-      - name: Log in to DockerHub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.ericksilvad8}}
-          password: ${{ secrets.dckr_pat_DYylulNFt7Gi9BfsdToP4iJg_4k}}
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.ericksilvad8 }}   # Seu nome de usuário no Docker Hub
+        password: ${{ secrets.dckr_pat_DYylulNFt7Gi9BfsdToP4iJg_4k }}  # Seu token de acesso pessoal
 
-      - name: Build Docker image
-        run: docker build -t ericksilvad8/react-app .
+    - name: Build Docker image
+      run: docker build -t ericksilvad8/react-app:latest .
 
-      - name: Push Docker image
-        run: docker push ericksilvad8/react-app
+    - name: Push Docker image
+      run: docker push ericksilvad8/react-app:latest
