--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -16,8 +16,8 @@ jobs:
     - name: Log in to Docker Hub
       uses: docker/login-action@v2
       with:
-        username: ${{ secrets.ericksilvad8 }}   # Seu nome de usuário no Docker Hub
-        password: ${{ secrets.dckr_pat_DYylulNFt7Gi9BfsdToP4iJg_4k }}  # Seu token de acesso pessoal
+        username: ${{ secrets.ERICKSILVAD8}}  # Verifique o nome exato do seu secret
+        password: ${{ secrets.dckr_pat_DYylulNFt7Gi9BfsdToP4iJg_4k}}  # Verifique o nome exato do seu secret
 
     - name: Build Docker image
       run: docker build -t ericksilvad8/react-app:latest .
