--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,27 +1,45 @@
-name: Docker Build and Push
+# .github/workflows/build-and-test.yml
+name: Build and Test
 
 on:
   push:
     branches:
       - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
-  docker_build:
+  build:
     runs-on: ubuntu-latest
-
+    strategy:
+      matrix:
+        component: [frontend, backend, database]
+    
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v2
 
-    - name: Log in to Docker Hub
-      uses: docker/login-action@v2
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+
+    - name: Cache Docker layers
+      uses: actions/cache@v2
       with:
-        username: ${{ secrets.ericksilvad8 }}  # Nome de usuário do Docker Hub
-        password: ${{ secrets.dckr_pat_DYylulNFt7Gi9BfsdToP4iJg_4k }}  # Token de acesso pessoal do Docker Hub
+        path: /tmp/.buildx-cache
+        key: ${{ runner.os }}-buildx-${{ github.sha }}
+        restore-keys: |
+          ${{ runner.os }}-buildx-
 
-    - name: Build Docker image
-      run: docker build -t ericksilvad8/react-app:latest .
-
-    - name: Push Docker image
-      run: docker push ericksilvad8/react-app:latest
-
+    - name: Build and Test ${{ matrix.component }} Docker image
+      run: |
+        docker build -t ${{ matrix.component }} .
+        docker run -d --name ${{ matrix.component }} ${{ matrix.component }}
+        docker ps
+        # Adicione os testes necessários para cada componente, como por exemplo:
+        # Para o front-end (React):
+        # docker exec ${{ matrix.component }} curl http://localhost:3000
+        # Para o back-end (Express):
+        # docker exec ${{ matrix.component }} curl http://localhost:5000
+        docker stop ${{ matrix.component }}
+        docker rm ${{ matrix.component }}
